# chat-app-rs

./: Cargo.toml  README.md
src/: main.rs  test.rs
static/: reset.css  script.js
