[package]
name = "chat-app-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", feature = ["json"]}
serde = { version = "1.0", features =["derive"]}
serde_json = "1.0"

[dev-dependencies]
rand = "0.8"